5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1716_2505.log
== TEST (2019-05-11 02:22:18) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:22:38) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:23:00) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:24:04) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:24:14) 
-- CODE:
import math
x = eval(input("valor de x: ")))
k = float(input("valor de k: "))
 
-- ERROR:
File "XXXX", line 2
    x = eval(input()))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:24:35) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:24:44) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:25:01) 
-- CODE:
import math.pi
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import math.pi
ModuleNotFoundError: No module named 'math.pi'; 'math' is not a package
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:25:34) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:25:42) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:26:08) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:26:31) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:26:45) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:37:25) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 1
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma= soma + ((-1)**(n+1)) * ((x**(2*i-1))/f)
	i = i+1
print(round(soma,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:37:51) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 1
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma= soma + ((-1)**(i+1)) * ((x**(2*i-1))/f)
	i = i+1
print(round(soma,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 02:38:08) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 1
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma= soma + ((-1)**(i+1)) * ((x**(2*i-1))/f)
	i = i+1
print(round(soma,10))
-- EXECUTION TIME:
0.139984
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:41:47) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:42:45) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:45:19) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 1
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma= soma + ((-1)**(i+1)) * ((x**(2*i-1))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:45:49) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 1
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma= soma + ((-1)**(i+1)) * ((x**(2*i-1))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:46:04) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 1
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma= soma + ((-1)**(i+1)) * ((x**(2*i-1))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:46:40) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 1
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma= soma + ((-1)**(i+1)) * ((x**(2*i-1))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:47:09) 
-- CODE:
import math
x = eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 1
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma= soma + ((-1)**(i+1)) * ((x**(2*i-1))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
File "XXXX", line 2
    x = eval(input()))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:47:22) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
i = 1
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma= soma + ((-1)**(i+1)) * ((x**(2*i-1))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:47:46) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
i = 1
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma= soma + ((-1)**(i+1)) * ((x**(2*i-1))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:48:08) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
i = 1
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma= soma + ((-1)**(i+1)) * ((x**(2*i-1))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:48:31) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
i = 1
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma= soma + ((-1)**(i+1)) * ((x**(2*i-1))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:48:46) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma= soma + ((-1)**(i+1)) * ((x**(2*i-1))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:49:23) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i)
	soma= soma + ((-1)**(i+1)) * ((x**(2*i-1))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:49:55) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i)
	soma= soma + ((-1)**(i)) * ((x**(2*i))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:50:13) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i)
	soma= soma + ((-1)**(i)) * ((x**(2*i))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:50:34) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i)
	soma= soma + ((-1)**(i)) * ((x**(2*i))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 02:50:37) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i)
	soma= soma + ((-1)**(i)) * ((x**(2*i))/f)
	i = i+1
print(round(soma,10))

-- EXECUTION TIME:
0.114179
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:51:03) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: "))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i)
	soma= soma + ((-1)**(i)) * ((x**(2*i))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
File "XXXX", line 3
    k = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:51:16) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i)
	soma= soma + ((-1)**(i)) * ((x**(2*i))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:51:33) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i)
	soma= soma + ((-1)**(i)) * ((x**(2*i))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 02:51:50) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i)
	soma= soma + ((-1)**(i)) * ((x**(2*i))/f)
	i = i+1
print(round(soma,10))

-- EXECUTION TIME:
0.172683
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:53:22) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i)
	soma= soma + ((-1)**(i)) * ((x**(2*i))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:53:30) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i)
	soma= soma + ((-1)**(i)) * ((x**(2*i))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 02:53:39) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<k):
	from math import factorial
	f = factorial(2*i)
	soma= soma + ((-1)**(i)) * ((x**(2*i))/f)
	i = i+1
print(round(soma,10))

-- EXECUTION TIME:
0.130642
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:53:57) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<=k-1):
	from math import factorial
	f = factorial(2*i)
	soma= soma + ((-1)**(i)) * ((x**(2*i))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 02:54:06) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<=k-1):
	from math import factorial
	f = factorial(2*i)
	soma= soma + ((-1)**(i)) * ((x**(2*i))/f)
	i = i+1
print(round(soma,10))

-- EXECUTION TIME:
0.167946
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:55:33) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<=k-1):
	from math import factorial
	f = factorial(2*i+1)
	soma= soma + ((-1)**(i)) * ((x**(2*i))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 02:55:42) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<=k-1):
	from math import factorial
	f = factorial(2*i+1)
	soma= soma + ((-1)**(i)) * ((x**(2*i))/f)
	i = i+1
print(round(soma,10))

-- EXECUTION TIME:
0.185752
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 02:56:43) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<=k-1):
	from math import factorial
	f = factorial(2*i+1)
	soma= soma + ((-1)**(i)) * ((x**(2*i+1))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 02:56:53) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<=k-1):
	from math import factorial
	f = factorial(2*i+1)
	soma= soma + ((-1)**(i)) * ((x**(2*i+1))/f)
	i = i+1
print(round(soma,10))

-- EXECUTION TIME:
0.182858
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 23:03:25) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<=k-1):
	from math import factorial
	f = factorial(2*i+1)
	soma= soma + ((-1)**(i)) * ((x**(2*i+1))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 23:04:03) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<=k-1):
	from math import factorial
	f = factorial(2*i+1)
	soma= soma + ((-1)**(i)) * ((x**(2*i+1))/f)
	i = i+1
print(round(soma,10))

-- EXECUTION TIME:
0.140696
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 23:11:53) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<=k-1):
	from math import factorial
	f = factorial(2*i+1)
	soma= soma + ((-1)**(i+1)) * ((x**(2*i+1))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 23:12:12) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<=k-1):
	from math import factorial
	f = factorial(2*i+1)
	soma= soma + ((-1)**(i+1)) * ((x**(2*i+1))/f)
	i = i+1
print(round(soma,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 23:12:23) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
i = 0
soma = 0
while(i<=k-1):
	from math import factorial
	f = factorial(2*i+1)
	soma= soma + ((-1)**(i+1)) * ((x**(2*i+1))/f)
	i = i+1
print(round(soma,10))

-- EXECUTION TIME:
0.150208
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:12:57) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = eval(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	f = factorial(2*k-1)
	soma = soma + ((-1**(k+1))*((x**(2*k-1)))/f)
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:13:32) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = eval(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*k-1)
	soma = soma + ((-1**(k+1))*((x**(2*k-1)))/f)
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 17:13:42) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = eval(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*k-1)
	soma = soma + ((-1**(k+1))*((x**(2*k-1)))/f)
	i = i + 1
print(round(soma, 10))


-- EXECUTION TIME:
0.136472
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:16:03) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = eval(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*k-1)
	soma = soma + ((-1)**(2*k+1))*(x**(2*k-1))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:16:24) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*k-1)
	soma = soma + ((-1)**(2*k+1))*(x**(2*k-1))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:17:59) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = eval(input("valor de k: "))
soma = 0
i = 1
while(i<k):
	from math import factorial
	f = factorial(2*k-1)
	soma = soma + ((-1)**(2*k+1))*(x**(2*k-1))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:18:08) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = eval(input("valor de k: "))
soma = 0
i = 1
while(i<k):
	from math import factorial
	f = factorial(2*k-1)
	soma = soma + ((-1)**(2*k+1))*(x**(2*k-1))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 17:18:18) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = eval(input("valor de k: "))
soma = 0
i = 1
while(i<k):
	from math import factorial
	f = factorial(2*k-1)
	soma = soma + ((-1)**(2*k+1))*(x**(2*k-1))/f
	i = i + 1
print(round(soma, 10))


-- EXECUTION TIME:
0.146877
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:21:02) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = eval(input("valor de k: "))
soma = 0
i = 1
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + ((-1)**(2*i+1))*(x**(2*i-1))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:21:11) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = eval(input("valor de k: "))
soma = 0
i = 1
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + ((-1)**(2*i+1))*(x**(2*i-1))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:21:33) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = eval(input("valor de k: "))
soma = 0
i = 1
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + ((-1)**(2*i+1))*(x**(2*i-1))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:22:04) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = eval(input("valor de k: "))
soma = 0
i = 1
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + ((-1)**(2*i+1))*(x**(2*i-1))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 17:22:17) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = eval(input("valor de k: "))
soma = 0
i = 1
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + ((-1)**(2*i+1))*(x**(2*i-1))/f
	i = i + 1
print(round(soma, 10))


-- EXECUTION TIME:
0.146926
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:22:50) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + ((-1)**(2*i+1))*(x**(2*i-1))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 17:23:00) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = float(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + ((-1)**(2*i+1))*(x**(2*i-1))/f
	i = i + 1
print(round(soma, 10))


-- EXECUTION TIME:
0.134201
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:23:22) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + ((-1)**(2*i+1))*(x**(2*i-1))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 17:23:30) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + ((-1)**(2*i+1))*(x**(2*i-1))/f
	i = i + 1
print(round(soma, 10))


-- EXECUTION TIME:
0.148473
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:25:34) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + ((-1)**(i+1))*(x**(2*i-1))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:25:46) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + ((-1)**(i+1))*(x**(2*i-1))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 17:25:55) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + ((-1)**(i+1))*(x**(2*i-1))/f
	i = i + 1
print(round(soma, 10))


-- EXECUTION TIME:
0.182369
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:27:28) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 17:28:20) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- EXECUTION TIME:
0.178173
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:29:37) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:29:44) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:30:44) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:32:30) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = int(input("valor de k: "))
soma = 1
i = 1
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:32:41) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = int(input("valor de k: "))
soma = 1
i = 1
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:38:18) 
-- CODE:
import math
x = math.radians(eval(input("valor de x: ")))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = math.radians(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:41:19) 
-- CODE:
import math
x = eval(input("valor de x: ")))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
File "XXXX", line 2
    x = eval(input()))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:41:31) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 17:41:57) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- EXECUTION TIME:
0.142165
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:42:41) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 17:42:55) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- EXECUTION TIME:
0.223902
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:43:13) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 17:43:36) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- EXECUTION TIME:
0.14014
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 17:44:56) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- EXECUTION TIME:
0.142762
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:45:02) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:45:14) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:45:50) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:45:51) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:45:51) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:45:51) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:45:51) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:45:51) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:45:51) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:45:51) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:45:51) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 17:45:52) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- EXECUTION TIME:
0.254864
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:46:43) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = float(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:47:10) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:48:32) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 17:48:53) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- EXECUTION TIME:
0.11848
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:13:42) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- EXECUTION TIME:
0.138777
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:13:57) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = 1
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- EXECUTION TIME:
0.14541
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:13:59) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = 1
i = 1
while(i<=k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:14:05) 
-- CODE:
import math
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = 1
i = 1
while(i<k):
	from math import factorial
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:21:03) 
-- CODE:
from math import*
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = x
i = 1

while(i<k):
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- OUTPUT:
2.5706394282
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:21:18) 
-- CODE:
from math import*
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = x
i = 1
while(i<k):
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- OUTPUT:
2.5706394282
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:21:28) 
-- CODE:
from math import*
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = x
i = 1
while(i<k):
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- OUTPUT:
2.5706394282
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:21:58) 
-- CODE:
from math import*
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = x
i = 1
while(i<k):
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- EXECUTION TIME:
0.142742
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
2.5706394282
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-2.5753211823
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
1.9029983328
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:24:31) 
-- CODE:
from math import*
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = x
i = 1
while(i<k):
	f = factorial(2*i-1)
	soma = soma + (((-1)**(i+1))*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- OUTPUT:
2.5706394282
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:25:27) 
-- CODE:
from math import*
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = x
i = 1
while(i<k):
	f = factorial(2*i-1)
	soma = soma + ((-1)*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- OUTPUT:
-0.7303384779
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:26:24) 
-- CODE:
from math import*
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = x
i = 1
while(i<k):
	f = factorial(2*i-1)
	soma = soma + ((-1)*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- OUTPUT:
-0.7303384779
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:27:40) 
-- CODE:
from math import*
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = 0
i = 1
while(i<k):
	f = factorial(2*i-1)
	soma = soma + ((-1)*(i+1)*(x**(2*i-1)))/f
	i = i + 1
print(round(soma, 10))


-- OUTPUT:
-5.4216642218
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:29:46) 
-- CODE:
from math import*
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = 0
i = 1
sinal = -1
expoente = 3
while(i<k):
	f = factorial(2*i-1)
	soma = soma + (sinal*(x**(expoente)))/f
	i = i + 1
print(round(soma, 10))


-- OUTPUT:
-4.5548158923
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:31:51) 
-- CODE:
from math import*
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = x
i = 1
sinal = -1
expoente = 3
while(i<k):
	f = factorial(expoente)
	soma = soma + (sinal*(x**(expoente)))/f
	expoente = expoente + 1
	i = i + 1
print(round(soma, 10))


-- OUTPUT:
0.5706066144
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:36:12) 
-- CODE:
from math import*
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = x
i = 1
sinal = -1
expoente = 3
while(i<k):
	f = factorial(expoente)
	soma = soma + (sinal*(x**(expoente)))/f
	sinal = sinal * (-1)
	expoente = expoente + 2
	i = i + 1
print(round(soma, 10))


-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:36:24) 
-- CODE:
from math import*
x = eval(input("valor de x: "))
k = int(input("valor de k: "))
soma = x
i = 1
sinal = -1
expoente = 3
while(i<k):
	f = factorial(expoente)
	soma = soma + (sinal*(x**(expoente)))/f
	sinal = sinal * (-1)
	expoente = expoente + 2
	i = i + 1
print(round(soma, 10))


-- EXECUTION TIME:
0.189796
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
